fix the width of the location label
added a small change to the location label since the width was not fitting the content

--- a/test/src/app/app.component.css
+++ b/test/src/app/app.component.css
@@ -99,6 +99,7 @@
     flex-direction: row;
     align-items: center;
     background-color: var(--gray300--color);
+    width: fit-content;
     border-radius: 6px;
     padding: 12px;
     gap: 6px;
